Changed address alignment in print_label#best practices  Fixes #30

--- a/app/assets/stylesheets/home/print_label.css
+++ b/app/assets/stylesheets/home/print_label.css
@@ -123,3 +123,7 @@
 	text-align: right !important;
 	font-weight: bold;
 }
+
+#user_address_content{
+	margin-left:1em;
+}
